# wheel-hid-emulator

./: .gitignore  CMakeLists.txt  LICENSE  LOGICK.txt  Makefile  README.md  build_with_g++.bat  default.nix  flake.nix  logics.md  vjoy_dll.rc  wheel-emulator.conf
.github/workflows/: main.yml
src/: config.cpp  config.h  gamepad.cpp  gamepad.h  input.cpp  input.h  main.cpp  wheel_device.cpp  wheel_device.h  wheel_types.h
src/hid/: hid_device.cpp  hid_device.h  vjoy_loader.cpp  vjoy_loader.h
src/input/: device_enumerator.cpp  device_enumerator.h  device_scanner.cpp  device_scanner.h  input_manager.cpp  input_manager.h  wheel_input.h
src/logging/: logger.cpp  logger.h
